<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#2e4174"
    tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:textColor="#fff"
        android:layout_centerHorizontal="true"
        android:textSize="35sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:background="#60759e"
            android:textColor="#f3f4f5"
            android:textSize="22sp"
            android:singleLine="false"
            android:layout_margin="2dp"
            android:onClick="sendMessage" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:text="@string/scores_app"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:background="#60759e"
            android:textColor="#f3f4f5"
            android:textSize="22sp"
            android:layout_margin="2dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:text="@string/library_app"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:background="#60759e"
            android:textColor="#f3f4f5"
            android:textSize="25sp"
            android:layout_margin="2dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:background="#60759e"
            android:textColor="#f3f4f5"
            android:textSize="25sp"
            android:layout_margin="2dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:text="@string/xyz_reader"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal"
            android:background="#60759e"
            android:textColor="#f3f4f5"
            android:textSize="25sp"
            android:layout_margin="2dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:text="@string/my_own_app"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"
            android:background="#60759e"
            android:textColor="#f3f4f5"
            android:textSize="25sp"
            android:layout_margin="2dp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toast_layout_root"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="8dp"
            >

            <TextView android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFF"
                android:textSize="15sp"
                />
        </LinearLayout>

    </LinearLayout>




</RelativeLayout>
